--- a/private/404Page.html
+++ b/private/404Page.html
@@ -3,7 +3,7 @@
     <TITLE>404</TITLE>
 </HEAD>
 <body>
-<p>This Page doesn't exist .-.</p>
+<p>This Page doesn't exist</p>
 <a href="/">
     <button>HomePage</button>
 </a>
