--- a/private/resume.html
+++ b/private/resume.html
@@ -1,67 +1,9 @@
 <html>
-<style>
-    body {
-        font-family: Lato;
-        color: #2E2E2E;
-        margin-top: 200px;
-    }
-
-    a {
-        color: #2E2E2E;
-    }
-
-    a:visited {
-        color: #2E2E2E;
-    }
-
-    a:hover {
-        color: #000000;
-    }
-
-    a:active {
-        color: #000000;
-    }
-
-    .container {
-        text-align: center;
-        width: 400px;
-        margin: auto;
-    }
-
-    .name {
-        font-size: 40pt;
-        font-weight: bold;
-    }
-
-    .tagline {
-        font-variant: small-caps;
-        line-height: 35px;
-        font-size: 15pt;
-    }
-
-    .info {
-        margin-top: 10px;
-    }
-
-    .icon {
-        margin-left: 10px;
-    }
-
-    .iconWords {
-        margin-left: 1px;
-    }
-
-    .footline {
-        font-variant: small-caps;
-        text-align: right;
-        position: relative;
-        bottom: 0px;
-    }
-</style>
 <head>
     <meta charset="UTF-8">
     <title>Myles Thiessen</title>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato"/>
+    <link rel="stylesheet" type="text/css" href="resume.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
           integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
@@ -75,7 +17,7 @@
         <a><i class="fas fa-at"></i>thiessem@uwindsor.ca</a>
         <a href="https://github.com/ideaeclipse" target="_blank" style="text-decoration: none"><i
                 class="icon fab fa-github-alt"></i>Ideaeclipse</a>
-        <a href="Resume.pdf" target="_blank"
+        <a href="resume.pdf" target="_blank"
            style="text-decoration: none"><i class="icon far fa-file-pdf"></i>Resume</a>
     </nav>
 </div>
